Updated routes and error codes
