# server/src/main/kotlin/com/aselsan/routes/CustomerRoutes.kt
@@ -1,7 +1,9 @@
 package com.aselsan.routes
+import com.aselsan.com.aselsan.domain.model.GenericResponse
 import com.aselsan.domain.model.CustomerResponse
 import com.aselsan.service.CustomerService
 import io.ktor.http.HttpStatusCode
+import io.ktor.server.plugins.BadRequestException
 import io.ktor.server.response.respond
 import io.ktor.server.routing.Route
 import io.ktor.server.routing.get
@@ -11,23 +13,38 @@ import io.ktor.server.routing.route
 fun Route.customerRoutes(customerService: CustomerService) {
     route("/customers") {
         get("") {
-            val customers: List<CustomerResponse>  = customerService.getAllCustomers()
-            call.respond(HttpStatusCode.OK, customers)
+            try {
+                val customers: List<CustomerResponse>  = customerService.getAllCustomers()
+                call.respond(HttpStatusCode.OK, customers)
+            }
+            catch (e: Exception) {
+                call.respond(HttpStatusCode.InternalServerError,
+                    GenericResponse(success = false, message = "An unexpected error occurred."
+                    ))
+            }
+
         }
         get("/{id}") {
-            val id = call.parameters["id"]
-
-            if (id == null) {
-                call.respond(HttpStatusCode.BadRequest)
-                return@get
+            try {
+                val id = call.parameters["id"]
+                if (id == null) {
+                    call.respond(HttpStatusCode.BadRequest)
+                    return@get
+                }
+                val customer : CustomerResponse? = customerService.findById(id)
+                if (customer == null) {
+                    call.respond(HttpStatusCode.NotFound,
+                        GenericResponse(success = false, message = "Customer not found."
+                        ))
+                    return@get
+                }
+                call.respond(customer)
+            }catch (e: Exception) {
+                call.respond(HttpStatusCode.InternalServerError,
+                    GenericResponse(success = false, message = "An unexpected error occurred."
+                    ))
             }
-            val customer : CustomerResponse? = customerService.findById(id)
-            if (customer == null) {
-                call.respond(HttpStatusCode.NotFound)
-                return@get
-            }
 
-            call.respond(customer)
         }
 
     }
