# server/src/main/kotlin/com/aselsan/routes/ProductRoutes.kt
@@ -1,4 +1,5 @@
 package com.aselsan.routes
+import com.aselsan.com.aselsan.domain.model.GenericResponse
 import com.aselsan.domain.model.ProductResponse
 import com.aselsan.service.ProductService
 
@@ -12,8 +13,16 @@ import io.ktor.server.routing.route
 fun Route.productRoutes(productService: ProductService) {
     route("/products") {
         get("") {
-            val products: List<ProductResponse> = productService.getAllProducts()
-            call.respond(HttpStatusCode.OK, products)
+            try {
+                val products: List<ProductResponse> = productService.getAllProducts()
+                call.respond(HttpStatusCode.OK, products)
+            }
+            catch (e: Exception) {
+                call.respond(HttpStatusCode.InternalServerError,
+                    GenericResponse(success = false, message = "An unexpected error occurred."
+                    ))
+            }
+
         }
     }
 }
