# server/src/main/resources/openapi/documentation.yaml
@@ -1,4 +1,4 @@
-openapi: "3.1.0"
+openapi: "3.0.0"
 info:
   title: "Flex Cart API"
   description: "API for managing shopping carts, applying campaigns, and processing payments."
@@ -35,6 +35,8 @@ paths:
                       totalSpent: 300.0
                       lastYearSpent: 100.0
                       type: "NEW"
+        "500":
+          description: "Internal Server Error - Failed to get customers."
 
   /customers/{id}:
     get:
@@ -67,10 +69,21 @@ paths:
                     totalSpent: 6000.0
                     lastYearSpent: 5500.0
                     type: "PREMIUM"
-        "400":
-          description: "Bad Request - Missing or invalid customer ID."
+
         "404":
           description: "Not Found - No customer found with the given ID."
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+              examples:
+                example-1:
+                  value:
+                    success: false
+                    message: "Customer not found."
+
+        "500":
+          description: "Internal Server Error - Failed to get customer."
 
   /products:
     get:
@@ -146,8 +159,18 @@ paths:
                       - name: "Date-Based Discounts"
                         discount: 0.0
                     shippingFee: 25.0
-        "400":
-          description: "Bad Request - Invalid input or missing fields."
+        "404":
+          description: "Not Found - No customer or product found with the given ID."
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+              examples:
+                example-1:
+                  value:
+                    success: false
+                    message: "Product not found with ID: 7c0896a1-2ae3-407a-b255-8c50e8d99022"
+
         "500":
           description: "Internal Server Error - Failed to apply discount."
 
@@ -175,10 +198,25 @@ paths:
           content:
             application/json:
               schema:
-                type: string
-              example: "Payment completed successfully."
+                $ref: "#/components/schemas/GenericResponse"
+              example:
+                example-1:
+                  value:
+                    success: true
+                    message: "Payment completed successfully."
         "400":
           description: "Bad Request - Payment could not be completed."
+
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+              examples:
+                example-1:
+                  value:
+                    success: false
+                    message: "Amount to pay must be greater than 0."
+
         "500":
           description: "Internal Server Error - Unexpected error while processing payment."
 
@@ -321,3 +359,16 @@ components:
           type: number
           format: double
           example: 150.0
+
+    GenericResponse:
+      type: object
+      required:
+        - success
+        - message
+      properties:
+        success:
+          type: boolean
+          example: false
+        message:
+          type: string
+          example: "Customer not found."
